--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       let ties = 0;
 
       for (let i = 1; i < 6; i++) {
-        let userInput = prompt("Enter rock paper or scissors to play").toLowerCase();
+        let userInput = prompt("Enter rock paper or scissors to play.  Check web browser console to see results.").toLowerCase();
         playGame(userInput);
         if (i === 5) {
           score();
