added UI elements so user can see rock paper scissors with out using console.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
   </head>
   <body>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <br>
+    <div></div>
+    <div class="score"></div>
+
     <script src="/Rock-Paper-Scissors/RPS.js"></script>
   </body>
 </html>
